--- a/src/app/componentes/cabecalho/cabecalho.component.html
+++ b/src/app/componentes/cabecalho/cabecalho.component.html
@@ -1,14 +1,26 @@
 <header class="sticky-top">
   <nav class="navbar navbar-light bg-white">
-    <a href="" class="navbar-brand">Gatino Book</a>
+    <a class="navbar-brand">
+      <i
+        class="fa fa-bars ms-2"
+        (click)="menu.abreMenu()"
+        (keyup.space)="menu.abreMenu()"
+      ></i>
+      Gatino Book</a
+    >
+    <app-menu #menu>
+      <ul class="list-unstyled">
+        <li>
+          <a [routerLink]="['animais', 'novo']">Novo animal</a>
+        </li>
+      </ul>
+    </app-menu>
     <div *ngIf="user$ | async as user">
       <div *ngIf="user.name; else login">
-        <i class="fa fa-user-circle mr-1">
-        </i>
+        <i class="fa fa-user-circle mr-1"> </i>
         <a href="" class="mr-1">{{ user.name }}</a>
         <a (click)="logout()">Logout</a>
       </div>
-
     </div>
   </nav>
   <ng-template #login>
